third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/invalid_init.stderr
error[E0277]: the trait bound `impl pin_init::PinInit<Bar>: Init<Bar>` is not satisfied
  --> tests/ui/compile-fail/init/invalid_init.rs:19:16
   |
18 |       let _ = init!(Foo {
   |  _____________-
19 | |         bar <- Bar::new(),
   | |                ^^^^^^^^^^ the trait `Init<Bar>` is not implemented for `impl pin_init::PinInit<Bar>`
20 | |     });
   | |______- required by a bound introduced by this call
   |
help: the following other types implement trait `Init<T, E>`
  --> src/lib.rs
   |
   | / unsafe impl<T: ?Sized, E, I, F> Init<T, E> for ChainInit<I, F, T, E>
   | | where
   | |     I: Init<T, E>,
   | |     F: FnOnce(&mut T) -> Result<(), E>,
   | |_______________________________________^ `ChainInit<I, F, T, E>`
...
   |   unsafe impl<T, E> Init<T, E> for Result<T, E> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Result<T, E>`
